@@ -5121,13 +5121,13 @@ static OpTab Matrix_func[] = {
   {"tozero_m", int_matint_tozero},
   {"repmat_m_m", int_matint_repmat},
   {"isvector_m", int_matint_isvector},
-  {"eye_m", int_mxeye_deprecated},
+  {"eye_m", int_mxeye},
   {"eye_deprecated_m", int_mxeye_deprecated},
   {"eye_new_m", int_mxeye},
-  {"ones_m", int_mxones_deprecated},
+  {"ones_m", int_mxones},
   {"ones_deprecated_m", int_mxones_deprecated},
   {"ones_new_m", int_mxones},
-  {"zeros_m", int_mxzeros_deprecated},
+  {"zeros_m", int_mxzeros},
   {"zeros_deprecated_m", int_mxzeros_deprecated},
   {"zeros_new_m", int_mxzeros},
   {"feq_m_m", int_mxfeq},
